[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/gamestate/GameMaster.cs" type="Script" id=1]
[ext_resource path="res://assets/themes/MainMenuTheme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/ui/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://scripts/settings/GraphicsOptions.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/Roboto-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scripts/settings/AudioOptions.gd" type="Script" id=6]
[ext_resource path="res://scripts/settings/ControlOptions.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 5 )

[node name="Node2D" type="Node2D"]

[node name="GameMaster" type="Node" parent="."]
script = ExtResource( 1 )

[node name="MenuContainer" type="Container" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuContainer" type="MarginContainer" parent="MenuContainer"]
visible = false
margin_left = -1.41418
margin_right = 1278.59
margin_bottom = 720.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="VBoxContainer" parent="MenuContainer/MainMenuContainer"]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
custom_constants/separation = 40

[node name="PlayButton" type="Button" parent="MenuContainer/MainMenuContainer/ButtonContainer"]
margin_right = 1040.0
margin_bottom = 160.0
size_flags_vertical = 3
text = "Play"

[node name="OptionsButton" type="Button" parent="MenuContainer/MainMenuContainer/ButtonContainer"]
margin_top = 200.0
margin_right = 1040.0
margin_bottom = 360.0
size_flags_vertical = 3
text = "Options"

[node name="ExitButton" type="Button" parent="MenuContainer/MainMenuContainer/ButtonContainer"]
margin_top = 400.0
margin_right = 1040.0
margin_bottom = 560.0
size_flags_vertical = 3
text = "Exit"

[node name="OptionsMenuContainer" type="MarginContainer" parent="MenuContainer"]
margin_left = -1.41418
margin_right = 1278.59
margin_bottom = 720.0
theme = ExtResource( 2 )
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionTabsContainer" type="TabContainer" parent="MenuContainer/OptionsMenuContainer"]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0

[node name="Graphics" type="MarginContainer" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 46.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15
script = ExtResource( 4 )

[node name="HSplitContainer" type="HSplitContainer" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Graphics"]
margin_left = 15.0
margin_top = 15.0
margin_right = 1025.0
margin_bottom = 499.0
custom_constants/separation = 50
dragger_visibility = 1

[node name="GraphicsOptionsContainer" type="VBoxContainer" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Graphics/HSplitContainer"]
margin_right = 636.0
margin_bottom = 484.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.9
custom_constants/separation = 15

[node name="Resolution" type="HSplitContainer" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Graphics/HSplitContainer/GraphicsOptionsContainer"]
margin_right = 636.0
margin_bottom = 46.0

[node name="ResolutionLabel" type="Label" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Graphics/HSplitContainer/GraphicsOptionsContainer/Resolution"]
margin_right = 193.0
margin_bottom = 46.0
text = "Resolution:"

[node name="ResolutionButton" type="OptionButton" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Graphics/HSplitContainer/GraphicsOptionsContainer/Resolution"]
margin_left = 205.0
margin_right = 636.0
margin_bottom = 46.0
size_flags_horizontal = 3
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="HSplitContainer" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Graphics/HSplitContainer/GraphicsOptionsContainer"]
margin_top = 61.0
margin_right = 636.0
margin_bottom = 107.0

[node name="FullscreenLabel" type="Label" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Graphics/HSplitContainer/GraphicsOptionsContainer/Fullscreen"]
margin_right = 190.0
margin_bottom = 46.0
text = "Fullscreen:"

[node name="FullscreenButton" type="Button" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Graphics/HSplitContainer/GraphicsOptionsContainer/Fullscreen"]
margin_left = 202.0
margin_right = 636.0
margin_bottom = 46.0
size_flags_horizontal = 3
toggle_mode = true
text = "On"

[node name="RightContainer" type="VBoxContainer" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Graphics/HSplitContainer"]
margin_left = 686.0
margin_right = 1010.0
margin_bottom = 484.0
size_flags_horizontal = 3

[node name="FillerContainer" type="Container" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Graphics/HSplitContainer/RightContainer"]
margin_right = 324.0
margin_bottom = 434.0
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Graphics/HSplitContainer/RightContainer"]
margin_top = 438.0
margin_right = 324.0
margin_bottom = 484.0
text = "Main Menu"

[node name="Audio" type="MarginContainer" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 46.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15
script = ExtResource( 6 )

[node name="HSplitContainer" type="HSplitContainer" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Audio"]
margin_left = 15.0
margin_top = 15.0
margin_right = 1025.0
margin_bottom = 499.0
custom_constants/separation = 50
dragger_visibility = 1

[node name="AudiosOptionsContainer" type="VBoxContainer" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Audio/HSplitContainer"]
margin_right = 636.0
margin_bottom = 484.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.9
custom_constants/separation = 15

[node name="VolumeLabel" type="Label" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Audio/HSplitContainer/AudiosOptionsContainer"]
margin_right = 636.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Volume"

[node name="SFX" type="HSplitContainer" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Audio/HSplitContainer/AudiosOptionsContainer"]
margin_top = 75.0
margin_right = 636.0
margin_bottom = 121.0

[node name="SfxLabel" type="Label" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Audio/HSplitContainer/AudiosOptionsContainer/SFX"]
margin_right = 151.0
margin_bottom = 46.0
text = "       SFX: "

[node name="SfxSlider" type="HSlider" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Audio/HSplitContainer/AudiosOptionsContainer/SFX"]
margin_left = 163.0
margin_right = 636.0
margin_bottom = 46.0
size_flags_vertical = 1
value = 50.0

[node name="Music" type="HSplitContainer" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Audio/HSplitContainer/AudiosOptionsContainer"]
margin_top = 136.0
margin_right = 636.0
margin_bottom = 182.0

[node name="MusicLabel" type="Label" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Audio/HSplitContainer/AudiosOptionsContainer/Music"]
margin_right = 151.0
margin_bottom = 46.0
text = "   Music: "

[node name="MusicSlider" type="HSlider" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Audio/HSplitContainer/AudiosOptionsContainer/Music"]
margin_left = 163.0
margin_right = 636.0
margin_bottom = 46.0
size_flags_vertical = 1
value = 50.0

[node name="RightContainer" type="VBoxContainer" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Audio/HSplitContainer"]
margin_left = 686.0
margin_right = 1010.0
margin_bottom = 484.0
size_flags_horizontal = 3

[node name="FillerContainer" type="Container" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Audio/HSplitContainer/RightContainer"]
margin_right = 324.0
margin_bottom = 434.0
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Audio/HSplitContainer/RightContainer"]
margin_top = 438.0
margin_right = 324.0
margin_bottom = 484.0
text = "Main Menu"

[node name="Controls" type="MarginContainer" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 46.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15
script = ExtResource( 7 )

[node name="HSplitContainer" type="HSplitContainer" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls"]
margin_left = 15.0
margin_top = 15.0
margin_right = 1025.0
margin_bottom = 499.0
custom_constants/separation = 50
dragger_visibility = 1

[node name="ControlsOptionsContainer" type="VBoxContainer" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer"]
margin_right = 636.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.9
custom_constants/separation = 15

[node name="MovementLabel" type="Label" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer"]
margin_right = 636.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "Movement"

[node name="move_up" type="HSplitContainer" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer"]
margin_top = 75.0
margin_right = 636.0
margin_bottom = 121.0

[node name="Label" type="Label" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer/move_up"]
margin_right = 160.0
margin_bottom = 46.0
text = "Move Up:"

[node name="Button" type="Button" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer/move_up"]
margin_left = 172.0
margin_right = 636.0
margin_bottom = 46.0
toggle_mode = true

[node name="move_down" type="HSplitContainer" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer"]
margin_top = 136.0
margin_right = 636.0
margin_bottom = 182.0

[node name="Label" type="Label" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer/move_down"]
margin_right = 209.0
margin_bottom = 46.0
text = "Move Down:"

[node name="Button" type="Button" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer/move_down"]
margin_left = 221.0
margin_right = 636.0
margin_bottom = 46.0
toggle_mode = true

[node name="move_right" type="HSplitContainer" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer"]
margin_top = 197.0
margin_right = 636.0
margin_bottom = 243.0

[node name="Label" type="Label" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer/move_right"]
margin_right = 204.0
margin_bottom = 46.0
text = "Move Right:"

[node name="Button" type="Button" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer/move_right"]
margin_left = 216.0
margin_right = 636.0
margin_bottom = 46.0
toggle_mode = true

[node name="move_left" type="HSplitContainer" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer"]
margin_top = 258.0
margin_right = 636.0
margin_bottom = 304.0

[node name="Label" type="Label" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer/move_left"]
margin_right = 183.0
margin_bottom = 46.0
text = "Move Left:"

[node name="Button" type="Button" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer/move_left"]
margin_left = 195.0
margin_right = 636.0
margin_bottom = 46.0
toggle_mode = true

[node name="EquipmentLabel" type="Label" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer"]
margin_top = 319.0
margin_right = 636.0
margin_bottom = 379.0
custom_fonts/font = SubResource( 2 )
text = "Equipment"

[node name="use_item_1" type="HSplitContainer" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer"]
margin_top = 394.0
margin_right = 636.0
margin_bottom = 440.0

[node name="Label" type="Label" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer/use_item_1"]
margin_right = 195.0
margin_bottom = 46.0
text = "Use Item 1:"

[node name="Button" type="Button" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer/use_item_1"]
margin_left = 207.0
margin_right = 636.0
margin_bottom = 46.0
toggle_mode = true

[node name="use_item_2" type="HSplitContainer" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer"]
margin_top = 455.0
margin_right = 636.0
margin_bottom = 501.0

[node name="Label" type="Label" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer/use_item_2"]
margin_right = 195.0
margin_bottom = 46.0
text = "Use Item 2:"

[node name="Button" type="Button" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer/use_item_2"]
margin_left = 207.0
margin_right = 636.0
margin_bottom = 46.0
toggle_mode = true

[node name="use_item_3" type="HSplitContainer" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer"]
margin_top = 516.0
margin_right = 636.0
margin_bottom = 562.0

[node name="Label" type="Label" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer/use_item_3"]
margin_right = 195.0
margin_bottom = 46.0
text = "Use Item 3:"

[node name="Button" type="Button" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer/use_item_3"]
margin_left = 207.0
margin_right = 636.0
margin_bottom = 46.0
toggle_mode = true

[node name="RightContainer" type="VBoxContainer" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer"]
margin_left = 686.0
margin_right = 1010.0
margin_bottom = 562.0
size_flags_horizontal = 3
custom_constants/separation = 15

[node name="FillerContainer" type="Container" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/RightContainer"]
margin_right = 324.0
margin_bottom = 440.0
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/RightContainer"]
margin_top = 455.0
margin_right = 324.0
margin_bottom = 501.0
text = "Main Menu"

[node name="SaveButton" type="Button" parent="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/RightContainer"]
margin_top = 516.0
margin_right = 324.0
margin_bottom = 562.0
text = "Save"

[connection signal="pressed" from="MenuContainer/MainMenuContainer/ButtonContainer/PlayButton" to="MenuContainer" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MenuContainer/MainMenuContainer/ButtonContainer/OptionsButton" to="MenuContainer" method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MenuContainer/MainMenuContainer/ButtonContainer/ExitButton" to="MenuContainer" method="_on_ExitButton_pressed"]
[connection signal="item_selected" from="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Graphics/HSplitContainer/GraphicsOptionsContainer/Resolution/ResolutionButton" to="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Graphics" method="_on_ResolutionButton_item_selected"]
[connection signal="toggled" from="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Graphics/HSplitContainer/GraphicsOptionsContainer/Fullscreen/FullscreenButton" to="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Graphics" method="_on_FullscreenButton_toggled"]
[connection signal="pressed" from="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Graphics/HSplitContainer/RightContainer/BackButton" to="MenuContainer" method="_on_BackButton_pressed"]
[connection signal="value_changed" from="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Audio/HSplitContainer/AudiosOptionsContainer/SFX/SfxSlider" to="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Audio" method="_on_SfxSlider_value_changed"]
[connection signal="value_changed" from="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Audio/HSplitContainer/AudiosOptionsContainer/Music/MusicSlider" to="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Audio" method="_on_MusicSlider_value_changed"]
[connection signal="pressed" from="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Audio/HSplitContainer/RightContainer/BackButton" to="MenuContainer" method="_on_BackButton_pressed"]
[connection signal="pressed" from="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer/move_up/Button" to="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls" method="_on_Button_MoveUp_pressed"]
[connection signal="pressed" from="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer/move_down/Button" to="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls" method="_on_Button_MoveDown_pressed"]
[connection signal="pressed" from="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer/move_right/Button" to="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls" method="_on_Button_MoveRight_pressed"]
[connection signal="pressed" from="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer/move_left/Button" to="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls" method="_on_Button_MoveLeft_pressed"]
[connection signal="pressed" from="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer/use_item_1/Button" to="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls" method="_on_Button_UseItem1_pressed"]
[connection signal="pressed" from="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer/use_item_2/Button" to="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls" method="_on_Button_UseItem2_pressed"]
[connection signal="pressed" from="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/ControlsOptionsContainer/use_item_3/Button" to="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls" method="_on_Button_UseItem3_pressed"]
[connection signal="pressed" from="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/RightContainer/BackButton" to="MenuContainer" method="_on_BackButton_pressed"]
[connection signal="pressed" from="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls/HSplitContainer/RightContainer/SaveButton" to="MenuContainer/OptionsMenuContainer/OptionTabsContainer/Controls" method="_on_SaveButton_pressed"]
